@@ -1,6 +1,8 @@
 Unreleased
 ----------
 
+- Added better fault tolerance for insane date headers generated by spambots.
+  (LP #697033)
 
 0.15 (2011-06-15)
 -----------------
